--- a/package.json
+++ b/package.json
@@ -11,37 +11,39 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.19.2",
-    "core-js": "^3.6.5",
-    "vue": "^2.6.11",
-    "vue-class-component": "^7.2.5",
+    "axios": "^0.21.1",
+    "core-js": "^3.8.3",
+    "jsonwebtoken": "^8.5.1",
+    "vue": "^2.6.12",
+    "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^8.5.1",
-    "vue-router": "^3.3.4",
-    "vuex": "^3.5.1",
+    "vue-router": "^3.5.1",
+    "vuex": "^3.6.2",
     "vuex-module-decorators": "^0.16.1"
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
+    "@types/jsonwebtoken": "^8.5.0",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0",
-    "@vue/cli-plugin-babel": "^4.4.6",
-    "@vue/cli-plugin-e2e-nightwatch": "^4.4.6",
-    "@vue/cli-plugin-eslint": "^4.4.6",
-    "@vue/cli-plugin-router": "^4.4.6",
-    "@vue/cli-plugin-typescript": "^4.4.6",
-    "@vue/cli-plugin-unit-jest": "^4.4.6",
-    "@vue/cli-plugin-vuex": "^4.4.6",
-    "@vue/cli-service": "^4.4.6",
+    "@vue/cli-plugin-babel": "^4.5.11",
+    "@vue/cli-plugin-e2e-nightwatch": "^4.5.11",
+    "@vue/cli-plugin-eslint": "^4.5.11",
+    "@vue/cli-plugin-router": "^4.5.11",
+    "@vue/cli-plugin-typescript": "^4.5.11",
+    "@vue/cli-plugin-unit-jest": "^4.5.11",
+    "@vue/cli-plugin-vuex": "^4.5.11",
+    "@vue/cli-service": "^4.5.11",
     "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/eslint-config-typescript": "^5.0.2",
+    "@vue/eslint-config-typescript": "^5.1.0",
     "@vue/test-utils": "1.0.0-beta.31",
     "chromedriver": "79",
     "eslint": "^6.7.2",
-    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
-    "geckodriver": "^1.19.1",
+    "geckodriver": "^1.22.1",
     "prettier": "^1.19.1",
     "typescript": "~3.7.5",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.12"
   }
 }
